# bull

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  scan-output.txt  scan-results.txt
.github/workflows/: ci.yml  docker.yml  scan.yml
bull/: __init__.py  cli.py  config.py  exceptions.py  scanner.py  scoring.py
bull/analysis/: __init__.py  _shared.py  bearish.py  bullish.py  market_regime.py  neutral.py  patterns.py  sentiment.py  technical.py
bull/data/: __init__.py  market.py  tickers.py
bull/data/providers/: __init__.py  base.py  tiingo_provider.py  yfinance_provider.py
bull/models/: __init__.py  signal.py
bull/reporters/: __init__.py  console.py  email.py  json_report.py
tests/: conftest.py  test_patterns.py  test_scoring.py  test_technical.py  test_tickers.py
