[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bull"
version = "0.1.0"
description = "S&P 500 market scanner — bullish, bearish, and neutral pattern analysis with recommendations"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "kyleian" }]
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "rich>=13.7",
    "click>=8.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "requests>=2.31",
    "lxml>=5.1",
    "html5lib>=1.1",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest-mock>=3.12",
]

[project.scripts]
bull = "bull.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bull*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=bull --cov-report=term-missing -q"

[tool.coverage.run]
branch = true
source = ["bull"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
